<resources>
    <!--<string name="app_name">Touristeando</string>-->
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_recommend">Recomendar Lugar</string>
    <string name="share_app">Compartir Touristeando</string>
    <string name="add_place">Recomendar Lugar</string>
    <string name="share_text">Prueba Touristeando!!\n\nDescubre lo que tu ciudad tiene para ofrecerte.\n\nhttps://goo.gl/HQR3eQ \n\n</string>
    <string name="share_chooser_title">@string/share_app</string>
    <string name="generic_unexpected_error">Error inesperado</string>
    <string name="facebook_app_id">1151764564902117</string>
    <string name="fb_login_protocol_scheme">fb1151764564902117</string>

    <!-- Misc Messages -->
    <string name="permission_denied">Permiso denegado</string>
    <string name="loader_message">Cargando...</string>
    <string name="no_network_connection">No tienes conexi\u00f3n a internet</string>
    <string name="no_location_found">No pude obtener tu ubicaci\u00f3n, intenta de nuevo</string>
    <string name="no_current_location">No pude determinar tu ubicaci\u00f3n</string>
    <string name="btn_ok">Aceptar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="no_location_services">Instala o actualiza Google Play Services para acceder a tu ubicaci\u00f3n.</string>
    <string name="agent_initial_message">
        <![CDATA[
            <strong>Hola Tourister!!</strong>\n
            <p>Descubre las mejores cosas para hacer y lugares que la ciudad tiene para ofrecerte. Puedes preguntarme sobre donde:</p>\n
            <p>
                * Jugar Fútbol
                * Tomar un Café
                * Hacer Ejercicio
                * Jugar Paintball
                * Tener Asistencia Odontológica y más.
            </p>\n
            <p>En cualquier momento escribe la palabra ayuda o presiona el bot\u00f3n verde ubicado abajo a la izquierda del campo de texto para que conozcas que otras cosas puedo hacer por ti.</p>
        ]]>
    </string>

    <!-- Main Activity -->
    <!-- Drawer -->
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Drawer Items -->
    <string name="nav_section_others">Otros</string>

    <string name="nav_home">Asistente</string>
    <string name="nav_setting">Ajustes</string>
    <string name="nav_feedback">Feedback \u0026 Ayuda</string>
    <string name="nav_profile">Perfil</string>
    <string name="nav_terms">T\u00e9rminos de Servicio</string>
    <string name="nav_offers">Notificaciones</string>
    <string name="nav_bookings">Citas \u0026 Reservaciones</string>
    <string name="nav_invitations">Invitaciones</string>

    <!-- Navigation Drawer Toolbar Titles -->
    <string-array name="nav_item_activity_titles">
        <item>@string/nav_home</item>
        <item>@string/nav_profile</item>
        <item>@string/nav_offers</item>
        <item>@string/nav_bookings</item>
        <item>@string/nav_invitations</item>
    </string-array>

    <!-- Assistant Activity -->
    <string name="txt_placeholder_chat_input">¿Qu\u00e9 quieres descubrir? ...</string>
    <string name="txt_placeholder_chat_listening">Escuchando...</string>
    <string name="generic_agent_error">No pude procesar lo que me pediste, intenta de nuevo.</string>
    <string name="generic_agent_no_content">Lo siento, no pude encontrar informaci\u00f3n.</string>
    <string name="location_canceled_by_user">Necesito tu ubicaci\u00f3n para mostrarte los mejores lugares cerca de ti.</string>
    <string name="example_hint">Ej:</string>

    <!-- Welcome -->
    <!-- Intro Slider -->
    <string name="next">Siguiente</string>
    <string name="skip">Omitir</string>
    <string name="start">Empezar</string>

    <string name="slide_1_title">Modo Tourister!</string>
    <string name="slide_1_desc">Convi\u00e9rtete en un turista en tu ciudad y comienza a descubrir y compartir lugares maravillosos.</string>

    <string name="slide_2_title">Cosas para hacer</string>
    <string name="slide_2_desc">Encuentra lugares donde puedes: tomarte un caf\u00e9, ir a comer, hacer ejercicio y m\u00e1s.</string>

    <string name="slide_3_title">Comparte</string>
    <string name="slide_3_desc">Saca tiempo para hacer eso que m\u00e1s te gusta con nuevas personas o con aquellos que ya conoces.</string>

    <!-- Preferences / Settings -->
    <string name="pref_clear_all">Borrar Historial</string>
    <string name="pref_clear_all_sum">Borra todos los mensajes de la conversaci\u00f3n con el asistente</string>
    <string name="pref_clear_all_dialog_msg">¿Desea borrar el historial de conversaci\u00f3n?</string>
    <string name="pref_default_distance">Distancia</string>
    <string name="pref_default_distance_sum">3 kms</string>
    <string name="pref_default_distance_dialog_title">Actualizar Distancia</string>
    <string name="pref_default_distance_dialog_msg">Establece la distancia por defecto para encontrar tus lugares favoritos</string>

    <string name="feedback_name">Nombre</string>
    <string name="feedback_email">Correo Electr\u00f3nico</string>
    <string name="feedback_msg">Comentario</string>
    <string name="feedback_intro">Env\u00edanos tus comentarios, sugerencias y todo lo que nos sirva para mejorar.</string>
    <string name="feedback_submit">Enviar</string>

    <!-- Place Detail -->
    <string name="dt_price_lbl">Desde</string>
    <string name="dt_place_price">%1$s %2$s</string>
    <string name="dt_place_description">Descripci\u00f3n</string>
    <string name="dt_place_services">Servicios</string>
    <string name="btn_toggle_place_description">Ver M\u00e1s</string>
    <string name="btn_toggle_place_description_minus">Ver Menos</string>
    <string name="invite_friend">Invitar Amigo</string>
    <string name="free_label">Gratis</string>
    <string name="price_lbl">Precio</string>
    <string name="undefined_price">Precio No Definido</string>
    <string name="show_route_title">¿C\u00f3mo Llegar?</string>
    <string name="show_route_msg">Sigue las instrucciones para llegar al lugar</string>
    <string name="take_me">C\u00f3mo LLegar</string>
    <string name="call_phone_msg">Llamar a </string>
    <string name="share_place">Compartir</string>
    <string name="dt_place_gallery">Galer\u00eda</string>
    <string name="dt_place_gallery_empty">No hay im\u00e1genes disponibles.\nS\u00e9 el primero en agregar la mejor panor\u00e1mica de este lugar.</string>
    <string name="btn_see_all_images">Ver Todas</string>
    <string name="btn_add_picture">Subir Imagen</string>
    <string name="choose_image_lbl">Elegir imagen desde...</string>
    <string name="choose_from_camera">C\u00e1mara</string>
    <string name="choose_from_library">Galer\u00eda</string>
    <string name="not_file_found">Archivo no encontrado</string>
    <string name="btn_submit_picked_image">@string/btn_ok</string>
    <string name="btn_cancel_picked_image">@string/btn_cancel</string>
    <string name="image_upload_error">No se pudo subir la imagen, intenta de nuevo.</string>

    <!-- Feedback -->
    <string name="feedback_empty_name">Ingresa tu nombre</string>
    <string name="feedback_invalid_name">Ingresa un nombre v\u00e1lido</string>
    <string name="feedback_empty_email">Ingresa tu correo electr\u00f3nico</string>
    <string name="feedback_invalid_email">Ingresa un correo electru00f3nico v\u00e1lido</string>
    <string name="feedback_empty_msg">Ingresa el comentario que quieres enviarnos</string>
    <string name="feedback_sent_successfully">Gracias por tu ayuda!\nMejoramos constantemente para hacer tu vida mucho mejor.</string>
    <string name="feedback_error_sending">No pudimos enviar tus comentarios, ¿Quieres intentar de nuevo?</string>

    <!-- Notifications -->
    <string name="no_notification_msg">No hay notificaciones disponibles</string>

    <!-- Galeria -->
    <string name="title_activity_gallery">Galer\u00eda</string>

    <!-- Login -->
    <string name="btn_twitter">Twitter</string>
    <string name="btn_facebook">Facebook</string>
    <string name="btn_google">Google</string>
    <string name="login_error_msg">No se pudo efectuar el inicio de sesi\u00f3n, intenta nuevamente.</string>
    <string name="login_cancel_msg">Inicio de sesi\u00f3n cancelado</string>
    <string name="auth_error">Fallo la autenticaci\u00f3n</string>
    <string name="title_activity_profile">Perfil</string>
    <string name="skip_login">Cerrar</string>
    <string name="lbl_logout">Cerrar Sesi\u00f3n</string>

    <!-- Recommend Place -->
    <string name="rc_intro">Recomienda lugares maravillosos, para que t\u00fa y otros Touristers puedan disfrutar.</string>
    <string name="rc_place_name">Nombre del Lugar/Negocio*</string>
    <string name="rc_place_description">Descripci\u00f3n</string>
    <string name="rc_place_category">Categor\u00eda</string>
    <string name="rc_place_address">Direcci\u00f3n*</string>
    <string name="rc_place_landmark">Punto de Referencia</string>
    <string name="rc_place_city">Ciudad*</string>
    <string name="rc_place_country">Pa\u00eds*</string>
    <string name="rc_place_phone">Tel\u00e9fono</string>
    <string name="rc_place_cell">N\u00famero Celular</string>
    <string name="rc_place_email">Correo Electr\u00f3nico</string>
    <string name="rc_place_lbl_currency">Moneda</string>
    <string name="rc_place_link_thumb">Url de la Imagen</string>
    <string name="rc_place_price">Precio</string>
    <string name="default_category">Seleccione Categor\u00eda</string>
    <string name="basic_header">Informaci\u00f3n B\u00e1sica</string>
    <string name="location_header">Informaci\u00f3n de Ubicaci\u00f3n</string>
    <string name="contact_header">Informaci\u00f3n de Contacto</string>
    <string name="pricing_header">Informaci\u00f3n de Precio</string>
    <string name="rc_place_lbl_thumb">Agregar Imagen*</string>
    <string name="rc_save_place">Guardar</string>
    <string name="no_categories_data">No se pudo obtener los datos de las categor\u00edas</string>
    <string name="place_not_saved">No se pudo enviar la informaci\u00f3n, intenta nuevamente</string>
    <string name="place_saved">Felicitaciones!! Has agregado un nuevo lugar a Touristeando. Este ser\u00e1 revisado antes de estar disponible.</string>
    <string name="missing_info">Ingrese informaci\u00f3n</string>
    <string name="remove_image">Eliminar Imagen</string>
    <string name="choose_img_header">Elija una imagen</string>
    <string name="default_currency">Seleccione Moneda</string>
    <string name="place_location_error">No se pudo determinar las coordenadas del lugar</string>
    <string name="rc_place_price_free">0</string>
    <string-array name="array_currency">
        <item>COP</item>
        <item>USD</item>
        <item>EUR</item>
        <item>INR</item>
        <item>MXN</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
