<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Chat">
        <Preference
            android:key="pref_clear_all"
            android:summary="@string/pref_clear_all_sum"
            android:title="@string/pref_clear_all" />
        <EditTextPreference
            android:key="pref_default_distance"
            android:title="@string/pref_default_distance"
            android:summary="@string/pref_default_distance_sum"
            android:dialogTitle="@string/pref_default_distance_dialog_title"
            android:inputType="number"
            android:dialogMessage="@string/pref_default_distance_dialog_msg"
            android:defaultValue="@integer/default_distance" />
    </PreferenceCategory>
</PreferenceScreen>