<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_profile" />
    </group>

    <item android:title="@string/nav_section_others">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/nav_setting" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/nav_feedback" />
        </menu>
    </item>
</menu>
