<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/activity_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        tools:context="co.bongga.touristeando.activities.Feedback">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback_intro"
            android:layout_marginBottom="30dp" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/feedback_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:ems="10"
                android:hint="@string/feedback_name"
                android:lines="1" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/feedback_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:hint="@string/feedback_email"
                android:lines="1" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/feedback_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/feedback_msg" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btnSubmitFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback_submit"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp" />
    </LinearLayout>
</ScrollView>
