<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.bongga.touristeando.activities.Login"
    android:background="@color/standar_fourth">
    <Button
        android:id="@+id/btn_skip_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_login"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:background="@android:color/transparent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/logo" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true">
        <ImageButton
            android:id="@+id/btn_twitter_login"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_login_twitter"
            android:background="@null"
            android:contentDescription="@string/btn_twitter"
            android:layout_margin="10dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"/>
        <ImageButton
            android:id="@+id/btn_facebook_login"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_login_facebook"
            android:background="@null"
            android:contentDescription="@string/btn_facebook"
            android:layout_margin="10dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true" />
        <ImageButton
            android:id="@+id/btn_google_login"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_login_google"
            android:background="@null"
            android:contentDescription="@string/btn_google"
            android:layout_margin="10dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"/>
    </LinearLayout>
</RelativeLayout>
